--- a/CookPopularControl/Themes/BaseStyle/TreeViewBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TreeViewBaseStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal"
                     xmlns:toolConverters="clr-namespace:CookPopularControl.Tools.Windows.Converters">
 
     <Style x:Key="ExpandCollapseToggleButtonStyle" TargetType="{x:Type ToggleButton}">
