--- a/CookPopularControl/Themes/NotifyStyle.xaml
+++ b/CookPopularControl/Themes/NotifyStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
                     xmlns:tb="http://www.hardcodet.net/taskbar">
 
@@ -113,8 +113,8 @@
         <Setter Property="ShowInTaskbar" Value="False" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="Effect" Value="{DynamicResource NotifyMessageShadowEffect}" />
-        <Setter Property="attached:WindowAttach.ShowInTaskManager" Value="False" />
-        <Setter Property="attached:WindowAttach.IgnoreAltF4" Value="True" />
+        <Setter Property="attached:WindowAttached.ShowInTaskManager" Value="False" />
+        <Setter Property="attached:WindowAttached.IgnoreAltF4" Value="True" />
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="5" />
         <Setter Property="Template">
             <Setter.Value>
