--- a/CookPopularControl/Themes/WindowStyle.xaml
+++ b/CookPopularControl/Themes/WindowStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal"
                     xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
                     xmlns:win="clr-namespace:CookPopularControl.Windows"
