--- a/CookPopularControl/Themes/BaseStyle/Others/EditingTagStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/Others/EditingTagStyle.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
-                    xmlns:pc="clr-namespace:CookPopularControl.Controls">
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
+                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ControlsBaseStyle.xaml" />
@@ -18,10 +19,11 @@
         <Setter Property="HeaderMargin" Value="0,0,6,0" />
         <Setter Property="HeaderHorizontalAlignment" Value="Right" />
         <Setter Property="HeaderVerticalAlignment" Value="Center" />
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource ValidationErrorBaseTemplate}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type pc:EditingTag}">
-                    <Border Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}" SnapsToDevicePixels="True">
+                    <Border x:Name="RootBorder" Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}" SnapsToDevicePixels="True">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="{TemplateBinding HeaderWidth}" />
@@ -73,6 +75,15 @@
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" TargetName="PART_TextBox" />
                             <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" TargetName="PART_NumericUpDown" />
+                        </Trigger>
+                        <Trigger Property="Validation.HasError" Value="True">
+                            <Setter Property="BorderBrush" Value="{DynamicResource FieldValidationErrorBrush}" />
+                            <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=BorderThickness.Left, Converter={toolkit:DoubleToThicknessConverter}, ConverterParameter=1.5}" TargetName="RootBorder" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="BorderThickness" Value="0" TargetName="RootBorder" />
+                            <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}" />
+                            <Setter Property="Foreground" Value="{DynamicResource AssistantForegroundBrush}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
