--- a/MvvmTestDemo/DemoViews/DateTimePickerDemo.xaml
+++ b/MvvmTestDemo/DemoViews/DateTimePickerDemo.xaml
@@ -5,6 +5,7 @@
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
+             xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
@@ -26,7 +27,7 @@
                     <DatePicker.SelectedDate>
                         <Binding Mode="TwoWay" Path="FutureValidatingDate" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
-                                <pc:FutureDateValidationRule ValidatesOnTargetUpdated="True" />
+                                <pt:FutureDateValidationRule ValidatesOnTargetUpdated="True" />
                             </Binding.ValidationRules>
                         </Binding>
                     </DatePicker.SelectedDate>
