--- a/MvvmTestDemo/DemoViews/FieldsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/FieldsDemo.xaml
@@ -5,6 +5,7 @@
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
+             xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800"
@@ -31,7 +32,7 @@
                     <TextBox.Text>
                         <Binding Mode="TwoWay" Path="TextContent1" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
-                                <pc:RangeValueValidationRule MaxValue="10" MinValue="1" ValidatesOnTargetUpdated="True" />
+                                <pt:RangeValueValidationRule MaxValue="10" MinValue="1" ValidatesOnTargetUpdated="True" />
                             </Binding.ValidationRules>
                         </Binding>
                     </TextBox.Text>
@@ -43,7 +44,7 @@
                     <TextBox.Text>
                         <Binding Mode="TwoWay" Path="TextContent2" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
-                                <pc:RegularPatternValidationRule RegularPattern="Chinese" ValidatesOnTargetUpdated="True" />
+                                <pt:RegularPatternValidationRule RegularPattern="Chinese" ValidatesOnTargetUpdated="True" />
                             </Binding.ValidationRules>
                         </Binding>
                     </TextBox.Text>
@@ -72,7 +73,7 @@
                     <pc:NumericUpDown.Value>
                         <Binding Mode="TwoWay" Path="NumericValue" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
-                                <pc:RangeValueValidationRule ErrorMessage="{x:Null}"
+                                <pt:RangeValueValidationRule ErrorMessage="{x:Null}"
                                                              MaxValue="10" MinValue="5" ValidatesOnTargetUpdated="True" />
                             </Binding.ValidationRules>
                         </Binding>
