--- a/MvvmTestDemo/DemoViews/PasswordBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/PasswordBoxDemo.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
+             xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml"
              mc:Ignorable="d"
              d:DataContext="{Binding RelativeSource={RelativeSource Self}}"
              d:DesignHeight="450"
@@ -49,7 +50,7 @@
                     <pc:PasswordBoxAssistant.Password>
                         <Binding Mode="TwoWay" Path="PasswordContent2" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
-                                <pc:RegularPatternValidationRule RegularPattern="PhoneNumber" ValidatesOnTargetUpdated="True" />
+                                <pt:RegularPatternValidationRule RegularPattern="PhoneNumber" ValidatesOnTargetUpdated="True" />
                             </Binding.ValidationRules>
                         </Binding>
                     </pc:PasswordBoxAssistant.Password>
