--- a/MvvmTestDemo/MainWindow.xaml
+++ b/MvvmTestDemo/MainWindow.xaml
@@ -10,6 +10,7 @@
                   xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
                   xmlns:prism="http://prismlibrary.com/"
                   xmlns:view="clr-namespace:MvvmTestDemo.DemoViews"
+                  xmlns:useCtl="clr-namespace:MvvmTestDemo.UserControls"
                   mc:Ignorable="d"
                   Title="CookPopularControl"
                   Width="1000"
@@ -51,7 +52,7 @@
     </pc:SideBarWindow.ClientTitleBarAdditionalContent>
 
     <Grid>
-        <Grid Visibility="Visible">
+        <Grid Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
@@ -92,7 +93,8 @@
             </ListBox>
             <ContentControl Grid.Column="1" Content="{Binding ControlContent}" />
         </Grid>
-        <view:ScrollViewerDemo Visibility="Collapsed" />
+        <view:FieldsDemo Visibility="Visible" />
+        <!--<useCtl:OverViewDemo Visibility="Visible" />-->
 
         <!--  接收BubbleMessage的容器  -->
         <ScrollViewer Margin="0,10,10,10"
